fixed auth layout centering

--- a/cartuning/src/app/modules/auth/layout/layout.component.html
+++ b/cartuning/src/app/modules/auth/layout/layout.component.html
@@ -1,5 +1,9 @@
-<div class="layout">
-    <div class="section">
-        <router-outlet></router-outlet>
+<div class='d-flex align-items-center justify-content-center' style='height: 100%;'>
+    <div class='p-4 ' style='width: 600px;'>
+        <div class='row d-flex align-items-center justify-content-center'>
+            <div class='col'>
+                <router-outlet></router-outlet>
+            </div>
+        </div>
     </div>
 </div>
