--- a/cartuning/src/app/app.component.html
+++ b/cartuning/src/app/app.component.html
@@ -1,50 +1,62 @@
-<div style="height: 100px;"></div>
 <alert style="position: absolute; min-width: 300px; left:50%; top: 50px; z-index: 99999"></alert>
 
-<mat-toolbar style="position: fixed; top: 0; z-index: 99; box-shadow: 0px -3px 8px 0px; background-color: var(--ets-dark);">  
+
+<div style="display: flex; flex-direction: column; min-height: 100vh; height: 100%;">
+
+  <div>
+    <mat-toolbar style="box-shadow: 0px -3px 8px 0px; background-color: var(--ets-dark);">  
   
-  <mat-toolbar-row class="section" style="height: 100px;">
-    <img src="../assets/logocaretrebuie-white-sm.png" class='page-logo' routerLink='/home'>
-    <div style="flex: 1 1 auto"></div>
-    <a mat-button routerLink='home' style="font-weight: bold; color: white;">Home</a>
-    <a mat-button routerLink='tune' style="font-weight: bold;  color: white;">Catalog Tuning</a>
-    <a mat-button routerLink='gallery' style="font-weight: bold; color: white;">Gallery</a>
-    <!-- <a mat-button routerLink='about' style="font-weight: bold; color: white;">About</a> -->
+      <mat-toolbar-row class="section" style="height: 100px;">
+        <img src="../assets/logocaretrebuie-white-sm.png" class='page-logo' routerLink='/home'>
+        <div style="flex: 1 1 auto"></div>
+        <a mat-button routerLink='home' style="font-weight: bold; color: white;">Home</a>
+        <a mat-button routerLink='tune' style="font-weight: bold;  color: white;">Catalog Tuning</a>
+        <a mat-button routerLink='gallery' style="font-weight: bold; color: white;">Gallery</a>
+        <!-- <a mat-button routerLink='about' style="font-weight: bold; color: white;">About</a> -->
+    
+    
+        <mat-menu #aboutMenu="matMenu">
+          <a mat-menu-item class='outline-none' routerLink='/about/faq'>FAQ</a>
+          <a mat-menu-item class='outline-none' routerLink='/about/experience'>Experience</a>
+          <a mat-menu-item class='outline-none' routerLink='/about/contact'>Contact</a>
+        </mat-menu>
+    
+        <button [matMenuTriggerFor]="aboutMenu" #tb='matMenuTrigger' class="shadow-none outline-none " style="background: transparent!important;border: none;">
+          <span style="font-size: 16px; margin-left: 8px; color: white; font-weight: bold;">About</span>
+          <mat-icon class="align-middle" style="color:#CCB686; font-size: 16px; width: 16px; height: 16px; transition: all 0.1s linear;" [ngClass]="{'clicked': tb.menuOpen}">keyboard_arrow_right</mat-icon>
+        </button>
+    
+    
+        <mat-menu #authMenu="matMenu">
+          <a mat-menu-item class="outline-none" *ngIf='accountService.userValue != null' style="font-weight: bold;">{{"Hello, " + accountService.userValue?.firstName}}</a>
+          <hr *ngIf='accountService.userValue != null' style="margin:0 auto">
+          <a mat-menu-item class="outline-none" *ngIf='accountService.userValue != null' routerLink='/user/profile' style="height: 32px; line-height: 32px;">Account</a>
+          <a mat-menu-item class="outline-none" *ngIf='accountService.userValue != null' routerLink='/user/orders' style="height: 32px; line-height: 32px;">Orders</a>
+          <a mat-menu-item class="outline-none" *ngIf='accountService.userValue != null' routerLink='/user/place-order' style="height: 32px; line-height: 32px;">Place Order</a>
+          <hr *ngIf='accountService.userValue != null' style="margin:0 auto">
+          <a mat-menu-item class="outline-none" *ngIf='accountService.userValue != null' routerLink='/home' (click)='logout()'>Logout</a>
+          
+          <a mat-menu-item class="outline-none" *ngIf='accountService.userValue == null' routerLink="/auth/login">Login</a>
+          <a mat-menu-item class="outline-none" *ngIf='accountService.userValue == null' routerLink="/auth/register">Register</a>
+        </mat-menu>
+          
+        <button [matMenuTriggerFor]="authMenu" #ta='matMenuTrigger' class="user-btn shadow-none outline-none">
+          <img *ngIf="accountService.userValue?.avatar" src="{{(accountService.userValue?.avatar != null ? accountService.userValue.avatar : 'keyboard_arrow_right')}} " style="width: 24px; height: 24px; border-radius: 50%;">
+          <mat-icon *ngIf="!accountService.userValue?.avatar" class="align-middle" style="color: white;">account_circle</mat-icon>
+          <span style="font-size: 16px; margin-left: 8px; color: white;">{{accountService.userValue ? accountService.userValue.username : "My Account"}}</span>
+          <mat-icon class="align-middle" style="color:#CCB686; font-size: 16px; width: 16px; height: 16px; transition: all 0.1s linear;" [ngClass]="{'clicked': ta.menuOpen}">keyboard_arrow_right</mat-icon>
+        </button>
+    
+      </mat-toolbar-row>
+    </mat-toolbar>
+  </div>
 
+  <div style="flex:1;">
+      <router-outlet></router-outlet>
+  </div>
 
-    <mat-menu #aboutMenu="matMenu">
-      <a mat-menu-item class='outline-none' routerLink='/about/faq'>FAQ</a>
-      <a mat-menu-item class='outline-none' routerLink='/about/experience'>Experience</a>
-      <a mat-menu-item class='outline-none' routerLink='/about/contact'>Contact</a>
-    </mat-menu>
+  <div>
+    <app-footer></app-footer>
+  </div>
 
-    <button [matMenuTriggerFor]="aboutMenu" #tb='matMenuTrigger' class="shadow-none outline-none " style="background: transparent!important;border: none;">
-      <span style="font-size: 16px; margin-left: 8px; color: white; font-weight: bold;">About</span>
-      <mat-icon class="align-middle" style="color:#CCB686; font-size: 16px; width: 16px; height: 16px; transition: all 0.1s linear;" [ngClass]="{'clicked': tb.menuOpen}">keyboard_arrow_right</mat-icon>
-    </button>
-
-
-    <mat-menu #authMenu="matMenu">
-      <a mat-menu-item class="outline-none" *ngIf='accountService.userValue != null' style="font-weight: bold;">{{"Hello, " + accountService.userValue?.firstName}}</a>
-      <hr *ngIf='accountService.userValue != null' style="margin:0 auto">
-      <a mat-menu-item class="outline-none" *ngIf='accountService.userValue != null' routerLink='/user/profile' style="height: 32px; line-height: 32px;">Account</a>
-      <a mat-menu-item class="outline-none" *ngIf='accountService.userValue != null' routerLink='/user/orders' style="height: 32px; line-height: 32px;">Orders</a>
-      <a mat-menu-item class="outline-none" *ngIf='accountService.userValue != null' routerLink='/user/place-order' style="height: 32px; line-height: 32px;">Place Order</a>
-      <hr *ngIf='accountService.userValue != null' style="margin:0 auto">
-      <a mat-menu-item class="outline-none" *ngIf='accountService.userValue != null' routerLink='/home' (click)='logout()'>Logout</a>
-      
-      <a mat-menu-item class="outline-none" *ngIf='accountService.userValue == null' routerLink="/auth/login">Login</a>
-      <a mat-menu-item class="outline-none" *ngIf='accountService.userValue == null' routerLink="/auth/register">Register</a>
-    </mat-menu>
-      
-    <button [matMenuTriggerFor]="authMenu" #ta='matMenuTrigger' class="user-btn shadow-none outline-none">
-      <img *ngIf="accountService.userValue?.avatar" src="{{(accountService.userValue?.avatar != null ? accountService.userValue.avatar : 'keyboard_arrow_right')}} " style="width: 24px; height: 24px; border-radius: 50%;">
-      <mat-icon *ngIf="!accountService.userValue?.avatar" class="align-middle" style="color: white;">account_circle</mat-icon>
-      <span style="font-size: 16px; margin-left: 8px; color: white;">{{accountService.userValue ? accountService.userValue.username : "My Account"}}</span>
-      <mat-icon class="align-middle" style="color:#CCB686; font-size: 16px; width: 16px; height: 16px; transition: all 0.1s linear;" [ngClass]="{'clicked': ta.menuOpen}">keyboard_arrow_right</mat-icon>
-    </button>
-
-  </mat-toolbar-row>
-</mat-toolbar>
-
-<router-outlet></router-outlet>
+</div>
