--- a/cartuning/src/app/modules/auth/login/login.component.html
+++ b/cartuning/src/app/modules/auth/login/login.component.html
@@ -1,61 +1,40 @@
+<div class="d-flex align-items-center justify-content-center" style="height: 100%;">
+  <div class='p-4 mat-elevation-z8'>
 
-<div class="row">
-    <!-- <div class="col-lg-4 align-self-center text-center">
-        <mat-icon style="color:#007bff; font-size: 128px; width: 128px; height: 128px;">person</mat-icon>
-        <div style="font-size: 24px; font-weight: bold; color:#007bff;" >
-            Welcome
-        </div>
-    </div> -->
-    <div class="col">
-        <div class="card" style="border-radius: 60px 0px 0px 60px; padding: 30px;">
-            <h4 class="card-header">Login</h4>
-            <div class="card-body">
-                <form [formGroup]="form" (ngSubmit)="onSubmit()">
+    <h2>Sign in</h2>
 
-                    <div>
-                        <mat-form-field class="example-form-field" style="width: 100%;">
-                          <mat-label>Username</mat-label>
-                          <input matInput type="text" formControlName="username">
-                          <!-- <button mat-button *ngIf="value" matSuffix mat-icon-button aria-label="Clear">
-                            <mat-icon>close</mat-icon>
-                          </button> -->
-                        </mat-form-field>
-                      </div>
+    <form [formGroup]="loginForm" (ngSubmit)='loginAsync()' class="mb-3">
+      <mat-form-field appearance="outline" class="w-100">
+        <mat-label>Email</mat-label>
+        <input matInput type="text" formControlName="username" autocomplete="off">
+        <mat-error *ngIf='loginForm.controls.username.hasError("required")'>Required</mat-error>
+      </mat-form-field>
 
-                      <div>
-                        <mat-form-field class="example-form-field" style="width: 100%;">
-                          <mat-label>Password</mat-label>
-                          <input matInput type="password" formControlName="password">
-                          <!-- <button mat-button *ngIf="value" matSuffix mat-icon-button aria-label="Clear">
-                            <mat-icon>close</mat-icon>
-                          </button> -->
-                        </mat-form-field>
-                      </div>
+      <mat-form-field appearance="outline" class="w-100">
+        <mat-label>Password</mat-label>
+        <input matInput type="password" formControlName="password">
+        <mat-error *ngIf='loginForm.controls.password.hasError("required")'>Required</mat-error>
+      </mat-form-field>
 
-<!--                       
-                    <div class="form-group">
-                        <label for="username">Username</label>
-                        <input type="text" formControlName="username" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.username.errors }" />
-                        <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
-                            <div *ngIf="f.username.errors.required">Username is required</div>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="password">Password</label>
-                        <input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
-                        <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
-                            <div *ngIf="f.password.errors.required">Password is required</div>
-                        </div>
-                    </div> -->
-                    <div class="form-group">
-                        <button [disabled]="loading" class="btn btn-primary">
-                            <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
-                            Login
-                        </button>
-                        <a routerLink="../register" class="btn btn-link">Register</a>
-                    </div>
-                </form>
-            </div>
-        </div>
+      <button mat-raised-button color='primary' class="w-100 d-flex justify-content-center" type="submit">
+        <!-- <mat-progress-bar mode='indeterminate' color='primary' *ngIf='isLoading'></mat-progress-bar> -->
+        <!-- <mat-spinner color='warn' *ngIf='isLoading' diameter='28' style="margin: 4px;"></mat-spinner> -->
+        <span *ngIf='!isLoading'>Sign in</span>
+      </button>
+    </form>
+
+    <div class="mb-3 d-flex justify-content-between align-items-center">
+      <button mat-button routerLink='/auth/resetpassword'>Forgot password?</button>
+      <button mat-button routerLink='/auth/register'>Register</button>
     </div>
+
+    <div class='w-100 text-center mb-3' style="color: #8888;"> or sign in with social account</div>
+
+    <div class="w-100 text-center">
+      <fa-icon class='fb-icon brand-icon' [icon]="faFacebook"></fa-icon>
+      <fa-icon class="gg-icon brand-icon" [icon]="faGoogle"></fa-icon>
+      <fa-icon class="dc-icon brand-icon" [icon]="faDiscord"></fa-icon>
+    </div>
+
+  </div>
 </div>
