--- a/cartuning/src/app/modules/auth/login/login.component.html
+++ b/cartuning/src/app/modules/auth/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="d-flex align-items-center justify-content-center" style="height: 100%;">
-  <div class='p-4 mat-elevation-z8'>
+  <div class='p-4 mat-elevation-z8'  style="width: 400px;">
 
     <h2>Sign in</h2>
 
@@ -18,7 +18,7 @@
 
       <button mat-raised-button color='primary' class="w-100 d-flex justify-content-center" type="submit">
         <!-- <mat-progress-bar mode='indeterminate' color='primary' *ngIf='isLoading'></mat-progress-bar> -->
-        <!-- <mat-spinner color='warn' *ngIf='isLoading' diameter='28' style="margin: 4px;"></mat-spinner> -->
+        <mat-spinner color='warn' *ngIf='isLoading' diameter='30' style="margin: 4px;"></mat-spinner>
         <span *ngIf='!isLoading'>Sign in</span>
       </button>
     </form>
