--- a/cartuning/src/app/modules/auth/register/register.component.html
+++ b/cartuning/src/app/modules/auth/register/register.component.html
@@ -1,80 +1,49 @@
+<div class="d-flex align-items-center justify-content-center" style="height: 100%;">
+  <div class='p-4 mat-elevation-z8' style="width: 400px;">
+
+    <h2>Create an account</h2>
+
+    <form [formGroup]="registerForm" class="mb-4">
+      <mat-form-field appearance="outline" class="w-100">
+        <mat-label>Username *</mat-label>
+        <input matInput type="text" formControlName="username" autocomplete="off">
+        <mat-error *ngIf="registerForm.controls.username.hasError('minlength')">Username must contain at least 3
+          characters</mat-error>
+        <mat-error *ngIf="registerForm.controls.username.hasError('required')">Required</mat-error>
+      </mat-form-field>
+
+      <mat-form-field appearance="outline" class="w-100 ">
+        <mat-label>Password *</mat-label>
+        <input matInput type="password" formControlName="password">
+        <mat-error *ngIf="registerForm.controls.password.hasError('minlength')">Password must contain at least 8
+          characters</mat-error>
+        <mat-error *ngIf="registerForm.controls.password.hasError('required')">Required</mat-error>
+      </mat-form-field>
 
 
+      <mat-form-field appearance="outline" class="w-100">
+        <mat-label>Confirm password *</mat-label>
+        <input matInput type="password" formControlName="confirmPassword">
+        <mat-error *ngIf="registerForm.controls.confirmPassword.hasError('minlength')">Password must contain at least 8
+          characters</mat-error>
+        <mat-error *ngIf="registerForm.controls.confirmPassword.hasError('required')">Required</mat-error>
+      </mat-form-field>
 
-<div class="row">
-    <!-- <div class="col-lg-4 align-self-center text-center">
-        <mat-icon style="color:#007bff; font-size: 128px; width: 128px; height: 128px;">person</mat-icon>
-        <div style="font-size: 24px; font-weight: bold; color:#007bff;" >
-            Welcome
-        </div>
-    </div> -->
-    <div class="col">
-        <div class="card" style="border-radius: 60px 0px 0px 60px; padding: 30px;">
-            <h4 class="card-header">Register</h4>
-            <div class="card-body">
-                <form [formGroup]="form" (ngSubmit)="onSubmit()">
+      <mat-form-field appearance="outline" class="w-100">
+        <mat-label>Email *</mat-label>
+        <input matInput type="email" formControlName="email">
+        <mat-error *ngIf="registerForm.controls.email.hasError('required')">Required</mat-error>
+      </mat-form-field>
 
-                    <div class='d-flex justify-content-between'>
-                        <mat-form-field class="example-form-field" style="width: 45%;">
-                            <mat-label>First Name</mat-label>
-                            <input matInput required type="text" formControlName="firstName">
-                            <mat-error *ngIf="f.firstName.hasError('required')">
-                                First name is <strong>required</strong>
-                              </mat-error>
-                            <!-- <button mat-button *ngIf="true" matSuffix mat-icon-button aria-label="Clear">
-                              <mat-icon>close</mat-icon>
-                            </button> -->
-                        </mat-form-field>
-                        <mat-form-field class="example-form-field" style="width: 45%;">
-                            <mat-label>Last Name</mat-label>
-                            <input matInput required type="text" formControlName="lastName">
-                            <mat-error *ngIf="f.lastName.hasError('required')">
-                                Last name is <strong>required</strong>
-                              </mat-error>
-                            <!-- <button mat-button *ngIf="true" matSuffix mat-icon-button aria-label="Clear">
-                              <mat-icon>close</mat-icon>
-                            </button> -->
-                          </mat-form-field>
-                    </div>
-                  
-                   <div>
-                      <mat-form-field class="example-form-field" style="width: 100%;">
-                        <mat-label>Username</mat-label>
-                        <input matInput required type="text" formControlName="username">
-                        <mat-error *ngIf="f.username.hasError('required')">
-                            Username is <strong>required</strong>
-                          </mat-error>
-                        <!-- <button mat-button *ngIf="true" matSuffix mat-icon-button aria-label="Clear">
-                          <mat-icon>close</mat-icon>
-                        </button> -->
-                      </mat-form-field>
+      <button mat-raised-button color='primary' class="w-100">
+        Register
+        <mat-progress-bar mode='indeterminate' color='primary'></mat-progress-bar>
+      </button>
+    </form>
 
-                    </div>
-                    <div>
-                      <mat-form-field class="example-form-field" style="width: 100%;">
-                        <mat-label>Password</mat-label>
-                        <input matInput required type="password" formControlName="password">
-                        <mat-error *ngIf="f.password.hasError('required')">
-                            Password is <strong>required</strong>
-                          </mat-error>
-                        <mat-error *ngIf="f.password.hasError('minlength')">
-                            Password must contain at least 6 characters.
-                        </mat-error>
-                        <!-- <button mat-button *ngIf="true" matSuffix mat-icon-button aria-label="Clear">
-                          <mat-icon>close</mat-icon>
-                        </button> -->
-                      </mat-form-field>
-                    </div>
-                   
-                    <div class="form-group" style="margin-top: 20px;">
-                        <button [disabled]="loading" class="btn btn-primary">
-                            <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
-                            Register
-                        </button>
-                        <a routerLink="../login" class="btn btn-link">Cancel</a>
-                    </div>
-                </form>
-            </div>
-        </div>
+    <div class="d-flex justify-content-center align-items-center">
+      <span mat-button style="color: #8888;">Have an account?</span>
+      <button mat-button routerLink='/auth/login'>Sign In</button>
     </div>
+  </div>
 </div>
