--- a/cartuning/src/app/aboutus/contact/contact.component.html
+++ b/cartuning/src/app/aboutus/contact/contact.component.html
@@ -45,3 +45,5 @@
 
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2780.3240373398835!2d22.12303271621148!3d45.82479451732935!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x474fa7428229883f%3A0x1cb667cfeb083ffc!2sEtsperformance!5e0!3m2!1sen!2sro!4v1594542505652!5m2!1sen!2sro" data-zoom="11" width="100%" height="550" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 </div>
+
+<app-footer></app-footer>
