--- a/cartuning/src/app/app.component.html
+++ b/cartuning/src/app/app.component.html
@@ -28,22 +28,22 @@
     
     
         <mat-menu #authMenu="matMenu">
-          <a mat-menu-item class="outline-none" *ngIf='accountService.userValue != null' style="font-weight: bold;">{{"Hello, " + accountService.userValue?.firstName}}</a>
-          <hr *ngIf='accountService.userValue != null' style="margin:0 auto">
-          <a mat-menu-item class="outline-none" *ngIf='accountService.userValue != null' routerLink='/user/profile' style="height: 32px; line-height: 32px;">Account</a>
-          <a mat-menu-item class="outline-none" *ngIf='accountService.userValue != null' routerLink='/user/orders' style="height: 32px; line-height: 32px;">Orders</a>
-          <a mat-menu-item class="outline-none" *ngIf='accountService.userValue != null' routerLink='/user/place-order' style="height: 32px; line-height: 32px;">Place Order</a>
-          <hr *ngIf='accountService.userValue != null' style="margin:0 auto">
-          <a mat-menu-item class="outline-none" *ngIf='accountService.userValue != null' routerLink='/home' (click)='logout()'>Logout</a>
+          <a mat-menu-item class="outline-none" *ngIf='accountService.accountValue != null' style="font-weight: bold;">{{accountService.accountValue?.email}}</a>
+          <hr *ngIf='accountService.accountValue != null' style="margin:0 auto">
+          <a mat-menu-item class="outline-none" *ngIf='accountService.accountValue != null' routerLink='/user/profile' style="height: 32px; line-height: 32px;">Account</a>
+          <a mat-menu-item class="outline-none" *ngIf='accountService.accountValue != null' routerLink='/user/orders' style="height: 32px; line-height: 32px;">Orders</a>
+          <a mat-menu-item class="outline-none" *ngIf='accountService.accountValue != null' routerLink='/user/place-order' style="height: 32px; line-height: 32px;">Place Order</a>
+          <hr *ngIf='accountService.accountValue != null' style="margin:0 auto">
+          <a mat-menu-item class="outline-none" *ngIf='accountService.accountValue != null' routerLink='/home' (click)='logout()'>Logout</a>
           
-          <a mat-menu-item class="outline-none" *ngIf='accountService.userValue == null' routerLink="/auth/login">Login</a>
-          <a mat-menu-item class="outline-none" *ngIf='accountService.userValue == null' routerLink="/auth/register">Register</a>
+          <a mat-menu-item class="outline-none" *ngIf='accountService.accountValue == null' routerLink="/auth/login">Login</a>
+          <a mat-menu-item class="outline-none" *ngIf='accountService.accountValue == null' routerLink="/auth/register">Register</a>
         </mat-menu>
           
         <button [matMenuTriggerFor]="authMenu" #ta='matMenuTrigger' class="user-btn shadow-none outline-none">
-          <img *ngIf="accountService.userValue?.avatar" src="{{(accountService.userValue?.avatar != null ? accountService.userValue.avatar : 'keyboard_arrow_right')}} " style="width: 24px; height: 24px; border-radius: 50%;">
-          <mat-icon *ngIf="!accountService.userValue?.avatar" class="align-middle" style="color: white;">account_circle</mat-icon>
-          <span style="font-size: 16px; margin-left: 8px; color: white;">{{accountService.userValue ? accountService.userValue.username : "My Account"}}</span>
+          <!-- <img *ngIf="accountService.accountValue?.avatar" src="{{(accountService.accountValue?.avatar != null ? accountService.accountValue.avatar : 'keyboard_arrow_right')}} " style="width: 24px; height: 24px; border-radius: 50%;"> -->
+          <!-- <mat-icon *ngIf="!accountService.accountValue?.avatar" class="align-middle" style="color: white;">account_circle</mat-icon> -->
+          <span style="font-size: 16px; margin-left: 8px; color: white;">{{accountService.accountValue ? accountService.accountValue.email : "My Account"}}</span>
           <mat-icon class="align-middle" style="color:#CCB686; font-size: 16px; width: 16px; height: 16px; transition: all 0.1s linear;" [ngClass]="{'clicked': ta.menuOpen}">keyboard_arrow_right</mat-icon>
         </button>
     
@@ -56,7 +56,6 @@
   </div>
 
   <div>
-    <app-footer></app-footer>
   </div>
 
 </div>
