--- a/cartuning/src/app/tuning/tuning.component.html
+++ b/cartuning/src/app/tuning/tuning.component.html
@@ -10,11 +10,13 @@
 
                 <div class="mb-3 d-flex justify-content-between">
                     <button mat-raised-button (click)="openAddCarBrandDialog()">Add Brand</button>
-                   <button mat-raised-button (click)="updateTuningTable()">Update</button>
+                    <button mat-mini-fab (click)="updateTuningTable()" color='primary'>
+                        <span class="material-icons" >cloud_upload</span>
+                    </button>
                 </div>
 
                 <div class="row">
-                    <div class="col-xl-3 col-md-4 col-sm-6 col-xs-12 mb-4" *ngFor='let car of carMap.cars'>
+                    <div class="col-xl-3 col-md-4 col-sm-6 col-xs-12 mb-4" *ngFor='let car of carMap'>
                         <div class="car-card" (click)="selectCar(car); false">
                             <div class="d-flex justify-content-end mr-2 mt-2">
                                 <button mat-mini-fab style="cursor: pointer; width: 20px; height: 20px;"
@@ -192,22 +194,17 @@
                         <th mat-header-cell *matHeaderCellDef> Actions </th>
                         <td mat-cell *matCellDef="let element">
                             <div class="d-flex">
-                                <button mat-mini-fab 
-                                    class="d-flex align-items-center justify-content-center mr-2" 
-                                    color="primary" 
-                                    style="width: 32px; height: 32px;"
+                                <button mat-mini-fab class="d-flex align-items-center justify-content-center mr-2"
+                                    color="primary" style="width: 32px; height: 32px;"
                                     (click)="openEditCarEngineDialog(element)">
                                     <span class="material-icons-round d-flex align-items-center justify-content-center"
                                         style="font-size: 16px;">
                                         edit
                                     </span>
                                 </button>
-    
-                                <button mat-mini-fab 
-                                    class="d-flex align-items-center justify-content-center" 
-                                    color="warn" 
-                                    style="width: 32px; height: 32px;"
-                                    (click)="deleteCarEngine(element)">
+
+                                <button mat-mini-fab class="d-flex align-items-center justify-content-center"
+                                    color="warn" style="width: 32px; height: 32px;" (click)="deleteCarEngine(element)">
                                     <span class="material-icons-round d-flex align-items-center justify-content-center"
                                         style="font-size: 16px;">
                                         delete
@@ -281,22 +278,17 @@
                         <th mat-header-cell *matHeaderCellDef> Actions </th>
                         <td mat-cell *matCellDef="let element">
                             <div class="d-flex">
-                                <button mat-mini-fab 
-                                    class="d-flex align-items-center justify-content-center mr-2" 
-                                    color="primary" 
-                                    style="width: 32px; height: 32px;"
+                                <button mat-mini-fab class="d-flex align-items-center justify-content-center mr-2"
+                                    color="primary" style="width: 32px; height: 32px;"
                                     (click)="openEditCarEngineDialog(element)">
                                     <span class="material-icons-round d-flex align-items-center justify-content-center"
                                         style="font-size: 16px;">
                                         edit
                                     </span>
                                 </button>
-    
-                                <button mat-mini-fab 
-                                    class="d-flex align-items-center justify-content-center" 
-                                    color="warn" 
-                                    style="width: 32px; height: 32px;"
-                                    (click)="deleteCarEngine(element)">
+
+                                <button mat-mini-fab class="d-flex align-items-center justify-content-center"
+                                    color="warn" style="width: 32px; height: 32px;" (click)="deleteCarEngine(element)">
                                     <span class="material-icons-round d-flex align-items-center justify-content-center"
                                         style="font-size: 16px;">
                                         delete
@@ -306,8 +298,11 @@
                         </td>
                     </ng-container>
 
-                    <tr mat-header-row *matHeaderRowDef="['engineName', 'original', 'tuned', 'symbol', 'price', 'actions']"></tr>
-                    <tr mat-row *matRowDef="let row; columns: ['engineName', 'original', 'tuned', 'symbol', 'price', 'actions'];"></tr>
+                    <tr mat-header-row
+                        *matHeaderRowDef="['engineName', 'original', 'tuned', 'symbol', 'price', 'actions']"></tr>
+                    <tr mat-row
+                        *matRowDef="let row; columns: ['engineName', 'original', 'tuned', 'symbol', 'price', 'actions'];">
+                    </tr>
                 </table>
 
                 <br><br>
